<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClose"
        android:layout_width="35dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/white"
        app:strokeWidth="1dp"
        android:minHeight="@dimen/min_btn_height"
        android:text="@string/close"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="@dimen/close_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="0dp"
        android:layout_marginRight="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/container_padding">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/text_size_welcome"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_log_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
            android:textSize="@dimen/text_size_log_name"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_selected_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/text_size_selected_user"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChs_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/button"
            app:cornerRadius="@dimen/corner_radius"
            android:minHeight="@dimen/min_btn_height"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>