<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstScreen"
    android:background="@drawable/bg_1">

    <!-- Circle image -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cIv_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profile"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@id/cL_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cL_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/container_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/cL_text"
            app:layout_constraintStart_toStartOf="@id/cL_text"
            app:layout_constraintTop_toTopOf="@id/cL_text"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="205dp"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius"
            app:boxCornerRadiusTopStart="@dimen/corner_radius"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxBackgroundColor="@color/text_input_bg"
            android:textColorHint="@color/text_input_text_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:textSize="@dimen/text_size_input"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/cL_text"
            app:layout_constraintStart_toStartOf="@id/cL_text"
            app:layout_constraintTop_toBottomOf="@id/tL1"
            app:layout_constraintBottom_toBottomOf="@id/cL_text"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="205dp"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius"
            app:boxCornerRadiusTopStart="@dimen/corner_radius"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxBackgroundColor="@color/text_input_bg"
            android:textColorHint="@color/text_input_text_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIe_Palindrome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Palindrome"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cL_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/container_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cL_text"
        android:layout_marginTop="50dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cL_button"
            android:backgroundTint="@color/button"
            app:cornerRadius="@dimen/corner_radius"
            android:minHeight="@dimen/min_btn_height"
            android:textStyle="bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn1"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/button"
            app:cornerRadius="@dimen/corner_radius"
            android:minHeight="@dimen/min_btn_height"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>